--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -2,7 +2,7 @@ div.navbar.navbar-default.navbar-inverse.navbar-fixed-top
 
         div.container
             div.navbar-header
-                button(type='button',class='navbar-toggle', data-toggle='collapse', data-target='.nav-collapse')
+                button(type='button',class='navbar-toggle', data-toggle='collapse', data-target='.navbar-collapse')
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
