--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -41,5 +41,5 @@ block content
                             span.pull-right 注册
 
 
-        script(data-main='/javascripts/app/user',src='/javascripts/require.js')
+        script(data-main='/build/app/user',src='/javascripts/require.js')
 
