--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -28,7 +28,14 @@
   max-width: @max-width;
 }
 
+
 /**utilies css for other**/
+.margin-top20{
+  margin-top: 20px;
+}
+.padding-top20{
+  padding-top: 20px;
+}
 .text-center{
   text-align:center;
 }
@@ -70,7 +77,7 @@
   color: #999999;
   font-size: 12px;
   font-weight: 300;
-  line-height: 25px;
+
 }
 body {
   .global-font;
@@ -119,28 +126,6 @@ body {
 
 /**one post**/
 
-.popover{
-  display: block;
-
-  position: relative;
-
-}
-.popover.right{
-  .arrow{
-    top:20%;
-  }
-}
-.content{
-  padding: 5px 10px 5px 10px;
-}
-
-.article{
-
-
-}
-.comment{
-  margin-bottom: 10px;
-}
 
 /**login page cess**/
 @grey:#E0E0E0;
