--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -23,9 +23,10 @@ block content
                              div.panel-body
                                  p
                                     !{post.content}
-                                 hr
-                                 p.pull-right
-                                    div(class='marketing-byline text-right text-muted')
+
+                             div.panel-footer
+                                 p.marketing-byline.text-right.text-muted
+
                                         a(href='/users/#{post.creator._id}',class='discussion-topic-author') #{post.creator.name}
                                         time
                                             | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#{post.fromNow}
