--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -24,7 +24,7 @@ block content
 
                             p
                             p
-                                input(id='upload-face-btn',type='button',name='myName',class='btn',value='上传')
+                                input(id='upload-face-btn',type='button',name='myName',class='btn btn-info',value='更改')
 
 
                 div.form-group
