--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -240,3 +240,12 @@ body {
 .width70percent{
   width:70%;
 }
+.post-content{
+  border:2px solid #f5f5f5;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  .preview-content-div{
+    padding-top: 20px;
+    min-height: 200px;
+  }
+}
