--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -26,7 +26,7 @@ block content
 
                                     a(href='#guide-makedown',data-toggle='modal',class='btn btn-default') 编辑器使用说明
 
-                        div.row
+                        div.row.post-content
                             div.col-md-12
                                 ul(class='nav nav-tabs')
                                     
@@ -41,9 +41,9 @@ block content
                                     div(class='tab-content')
                                         div(class='tab-pane active',id='write')
                                             div(id='posts',class='padding-top20')
-                                                textarea(id='editor_id',class='form-control', name='content',rows='10')
-                                        div(class='tab-pane active',id='preview')
-                                            div(id='posts',class='padding-top20')
+                                                textarea(id='editor-area',class='form-control', name='content',rows='10')
+                                        div(class='tab-pane',id='preview')
+                                            div(id='preview-content',class='preview-content-div')
                                                 
                                 
                     div.form-group
