--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -218,3 +218,12 @@ body {
 .width70percent {
   width: 70%;
 }
+.post-content {
+  border: 2px solid #f5f5f5;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.post-content .preview-content-div {
+  padding-top: 20px;
+  min-height: 200px;
+}
