change home page spin

--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -6861,6 +6861,9 @@ body {
   font-size: 14px;
 }
 /**home page cess**/
+.content-div {
+  min-height: 200px;
+}
 .icon-margin-top {
   margin-top: 3px;
 }
