--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,13 +5,11 @@ block append head
 block content
     body
         div(id='home-div',class='row')
-            div(class='col-md-8 well-no-back')
+            div(class='col-md-8 content-div')
                 div(class='tabbable')
                     ul(class='nav nav-tabs')
                         li(class='active')
-                            a(href='#new',data-toggle='tab')
-                                div(id='spinner')
-                                | 最新
+                            a(href='#new',data-toggle='tab') 最新
                     div(class='tab-content')
                         div(class='tab-pane active',id='new')
                             div(id='posts',class='padding-top20')
@@ -31,4 +29,4 @@ block content
                             div.col-md-10.rank-author
                                 a(href='/users/#{user._id}') #{user.name}
 
-        script(data-main='/build/app/home',src='/javascripts/require.js')
+        script(data-main='/javascripts/app/home',src='/javascripts/require.js')
