--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -56,6 +56,9 @@ body {
   font-size: 14px;
 }
 /**home page cess**/
+.content-div {
+  min-height: 200px;
+}
 .icon-margin-top {
   margin-top: 3px;
 }
