--- a/app/views/layouts/_only-logo.jade
+++ b/app/views/layouts/_only-logo.jade
@@ -2,7 +2,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
     div.navbar-inner
         div.container
             a(class='navbar-brand',href='/')
-                i.icon-eye-open
+                span.glyphicon.glyphicon-eye-open
                 | 发现
 
 
