--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -17,14 +17,18 @@ script(type="text/template",id="item-template")
                 a('href=/posts/"<%- _id %>"') <%- content %>
                     
     div.row
-        div(class='col-md-8',data-x='2825',data-y='2325',data-z='-3000' ,data-rotate='300' ,data-scale='1')
-            a(name='up-post',class='btn btn-default up','data="<%- _id %>"')
-                span(class='glyphicon glyphicon-thumbs-up')
-                | 顶(<%- up %>)
-            | &nbsp;
-            a(name='down-post',class='btn btn-default down')
-                span(class='glyphicon glyphicon-thumbs-down')
-                | 踩(<%- down %>)
+        div.col-md-8
+            div.row
+                div(name='up-post-div', class='col-md-2',data-x='2825',data-y='2325',data-z='-3000' ,data-rotate='300' ,data-scale='1')
+                    
+                    a(name='up-post',class='btn btn-default up','data="<%- _id %>"')
+                        span(class='glyphicon glyphicon-thumbs-up')
+                        | 顶(<%- up %>)
+                    
+                div(name='down-post-div', class='col-md-2',data-x='2825',data-y='2325',data-z='-3000' ,data-rotate='300' ,data-scale='1')    
+                    a(name='down-post',class='btn btn-default down')
+                        span(class='glyphicon glyphicon-thumbs-down')
+                        | 踩(<%- down %>)
 
     div.row
         div.col-md-12
