change to new up and down animation

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -29,4 +29,4 @@ block content
                             div.col-md-10.rank-author
                                 a(href='/users/#{user._id}') #{user.name}
 
-        script(data-main='/build/app/home',src='/javascripts/require.js')
+        script(data-main='/javascripts/app/home',src='/javascripts/require.js')
