--- a/app/views/layouts/logo-layout.jade
+++ b/app/views/layouts/logo-layout.jade
@@ -1,8 +1,8 @@
-doctype
+doctype 5
 html(lang='en')
     head
         block head
-            title= title
+            title = title
 
             include _meta
             include _css
