fix two responsive issue

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -66,12 +66,13 @@
   min-height: @min-height;
 }
 
+/***
 @media (max-width: 760px) {
   .min-container{
     margin-top: 0px;
     min-height: @min-height;
   }
-}
+}**/
 
 .grey-font{
   color: #999999;
