--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -10260,12 +10260,13 @@ Daniel Raftery <@ThirvingKings>
   margin-bottom: 40px;
   min-height: 500px;
 }
+/***
 @media (max-width: 760px) {
-  .min-container {
+  .min-container{
     margin-top: 0px;
-    min-height: 500px;
+    min-height: @min-height;
   }
-}
+}**/
 .grey-font {
   color: #999999;
   font-size: 12px;
@@ -10393,7 +10394,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 343px;
+    width: 212px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -10410,7 +10411,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 343px;
+    width: 212px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -10428,7 +10429,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 343px;
+    width: 212px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
