--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -40,12 +40,13 @@
   margin-bottom: 40px;
   min-height: 500px;
 }
+/***
 @media (max-width: 760px) {
-  .min-container {
+  .min-container{
     margin-top: 0px;
-    min-height: 500px;
+    min-height: @min-height;
   }
-}
+}**/
 .grey-font {
   color: #999999;
   font-size: 12px;
@@ -173,7 +174,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 343px;
+    width: 212px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -190,7 +191,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 343px;
+    width: 212px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -208,7 +209,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 343px;
+    width: 212px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
