--- a/app/views/users/user-blogs.jade
+++ b/app/views/users/user-blogs.jade
@@ -28,7 +28,7 @@ block content
                                     | #{post.fromNow}
                         div.row
                             div.col-md-12
-                                | #{post.content}
+                                p.word-break-wrap #{post.content}
 
                         if (own)
                             div.row
