--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -10239,6 +10239,9 @@ Daniel Raftery <@ThirvingKings>
   max-width: 1000px;
 }
 /**utilies css for other**/
+.word-break-wrap {
+  word-break: break-all;
+}
 .margin-top20 {
   margin-top: 20px;
 }
