--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -20,9 +20,9 @@ block content
                          div.panel.panel-info
                              div.panel-heading
                                   | #{post.title}
-                             div.panel-body
-                                 p
-                                    !{post.content}
+                             div.panel-body.word-break-wrap
+                                 !{post.content}
+
 
                              div.panel-footer
                                  p.marketing-byline.text-right.text-muted
