clear css and js cache

--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -127,4 +127,4 @@ block content
 
                     div.modal-footer
                         p powered by github makedown
-        script(data-main='/build/app/post-article',src='/javascripts/require.js')
+        script(data-main='/build/app/post-article',src='/javascripts/require.js?v=#{appVersion}')
