--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -55,4 +55,4 @@ block content
                     div.col-md-2.col-md-offset-2
                         button(class='btn btn-primary', type='submit') 提交
 
-    script(data-main='/build/app/edit-profile',src='/javascripts/require.js')
+    script(data-main='/build/app/edit-profile',src='/javascripts/require.js?v=#{appVersion}')
