--- a/app/views/layouts/_css.jade
+++ b/app/views/layouts/_css.jade
@@ -1,4 +1,5 @@
-link(rel='stylesheet', href='/stylesheets/application-all-min.css')
+- var appVersion = '0.2.4.5'
+link(rel='stylesheet', href='/stylesheets/application-all-min.css?v=#{appVersion}')
 
 
 
