--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -64,7 +64,7 @@ block content
                                 div.col-md-12
                                     !{comment.content}
                     hr
-        script(data-main='/build/app/post-show',src='/javascripts/require.js')
+        script(data-main='/build/app/post-show',src='/javascripts/require.js?v=#{appVersion}')
 
 
 
