--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -44,4 +44,4 @@ block content
                     div(class='row-fluid')
                         div(class='col-md-8') <%- content %>
 
-        script(data-main='/build/app/review',src='/javascripts/require.js')
+        script(data-main='/build/app/review',src='/javascripts/require.js?v=#{appVersion}')
