--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -46,4 +46,4 @@ block content
                         div.col-md-4.col-md-offset-2
                             button(class='btn btn-primary', type='submit') 提交
 
-        script(data-main='/build/app/reg',src='/javascripts/require.js')
+        script(data-main='/build/app/reg',src='/javascripts/require.js?v=#{appVersion}')
