--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -42,7 +42,7 @@ block content
                                 div.col-md-12
 
                                     input(name='postId',type='hidden',value='#{post._id}')
-                                    textarea(class='col-md-12', name='content',placeholder='发表评论')
+                                    textarea(class='col-md-12',rows='5',name='content',placeholder='发表评论')
                             div.form-group
                                 div.col-md-12
                                     button(type='submit', class='btn btn-success') 发言
