--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -42,10 +42,12 @@ script(type="text/template",id="item-template")
                     <%- creator.name %> 发表于 <%- fromNow %>
 
     hr.soft
-script(type="text/template",id="page-template")
+<!-- Templates -->
+script(type="text/template",id="pager-template")
     div.row
         div.col-md-12
-            div(id='pagination-div',class='pagination pull-right')
+            div(class='pagination pagination-right pull-right')
+            
 
 
 
