add tags and pages success

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -35,4 +35,4 @@ block content
                                
                                         | &nbsp; #{user.name}
 
-        script(data-main='/javascripts/app/home',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='/build/app/home',src='/javascripts/require.js?v=#{appVersion}')
