--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -23,8 +23,8 @@ block content
                             div.col-md-6
                                 label(for='title') 标签：
                         div.row
-                            div.col-md-6
-                                select(name='tag')
+                            div.col-md-12
+                                select(id='tag-select',name='tag',class='chosen-select tag-select')
                                     if typeof(tags) !== 'undefined' && tags.length > 0
                                         each tag, i in tags
                                             option(value='#{tag._id}') #{tag.name}
