change home page style add ie8, meta,email send, devices display

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,7 +5,7 @@ block append head
 block content
     body
         div(id='home-div',class='row')
-            div(class='col-md-9 content-div')
+            div(class='col-md-9 col-sm-9 content-div')
                 include home/post-content-bone
                 div(class='tabbable')
                     ul(id='content-ul-tab',class='nav nav-pills')
@@ -22,7 +22,7 @@ block content
                             div(id='discover-content',class='padding-top20')
                                
                                 
-            div(class='col-md-3')
+            div(class='col-md-3 col-sm-3 hidden-xs')
                 div.relative
                     h4.title 发现排行
                     hr
