--- a/app/views/layouts/_meta.jade
+++ b/app/views/layouts/_meta.jade
@@ -13,5 +13,6 @@ if typeof(keywords) !== 'undefined'
 else
     meta(name='keywords',content='自由发表 不删除内容 帮助需要帮助的人')
 meta(charset='utf-8')
-meta(content='width=device-width, initial-scale=1.0', name='viewport')
+meta(http-equiv='X-UA-Compatible',content='IE=edge')
+meta(name='viewport',content='width=device-width, initial-scale=1.0')
 meta(property='wb:webmaster',content="78e9f2e1c609997f")
