--- a/app/views/layouts/_js.jade
+++ b/app/views/layouts/_js.jade
@@ -1,6 +1,8 @@
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-script(src='/javascripts/google-code-prettify/html5.js')
-<![endif]-->
+//if lt IE 9
+	script(src="/javascripts/ie8-responsive-file-warning.js")
+//if lt IE 9
+	script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+	script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
 
