--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -15,35 +15,32 @@ block content
             form(action='/reg',method='post', class='form-horizontal',role='form')
                 fieldset
                     legend 注册
-                    
-
                     div.form-group
                         label(class='control-label col-md-2', for='username') 用户名
                         div.col-md-4
                             input(name='username',class='form-control',type='text',maxlength='50',required,data-validation-maxlength-message='用户名长度不能超过50个字符！')
-                            p.help-block
-
+                        div.col-md-4
+                            p.help-block 请输入小写字母，或汉字
                     div.form-group
                         label(class='control-label col-md-2',for='password') 密码
                         div.col-md-4
-
-                                input(name='password',class='form-control',type='password',maxlength='50',required,data-validation-maxlength-message='密码长度不能超过50个字符！')
-                                p.help-block
+                            input(name='password',class='form-control',type='password',maxlength='50',required,data-validation-maxlength-message='密码长度不能超过50个字符！')
+                        div.col-md-4
+                            p.help-block
                     div.form-group
                         label(class='control-label col-md-2',for='password-repeat') 密码确认
                         div.col-md-4
-
-                                input(name='password-repeat',class='form-control',type='password',data-validation-match-match='password',data-validation-match-message='两次密码必须一致！')
-                                p.help-block
+                            input(name='password-repeat',class='form-control',type='password',data-validation-match-match='password',data-validation-match-message='两次密码必须一致！')
+                        div.col-md-4
+                            p.help-block
 
                     div.form-group
                         label(class='control-label col-md-2',for='email') Email
                         div.col-md-4
-
-                                input(name='email',class='form-control',type='email',maxlength='100',required,data-validation-email-message='请输入有效的邮件地址！')
-                                p.help-block
+                            input(name='email',class='form-control',type='email',maxlength='100',required,data-validation-email-message='请输入有效的邮件地址！')
+                        div.col-md-4
+                            p.help-block
                     div.form-group
                         div.col-md-4.col-md-offset-2
                             button(class='btn btn-primary', type='submit') 提交
-
         script(data-main='/build/app/reg',src='/javascripts/require.js?v=#{appVersion}')
