--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -8,7 +8,7 @@
 @global-font-family:"Microsoft YaHei","微软雅黑",Tahoma, Arial,"Helvetica Neue", Helvetica,sans-serif,"宋体",;
 @global-font-size: 14px;
 
-@max-width:1000px;
+@max-width:80%;
 
 /**global settings**/
 .global-font{
