--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -10236,7 +10236,7 @@ Daniel Raftery <@ThirvingKings>
 }
 .container {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 80%;
 }
 /**utilies css for other**/
 .word-break-wrap {
